# msw-tasks-example

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  versioning.yml
src/murineshiftwork/tasks/example/: hook.py  task.py  task.yaml
tests/: test_hook.py
