[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "msw-tasks-example"
dynamic = ["version"]
description = "Murine Shift Work example task: minimal template demonstrating hardware and settings access."
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
authors = [
    { name = "Lars B. Rollik", email = "lars@rollik.me" },
]
requires-python = ">=3.12"
dependencies = [
    "msw-core>=0.11.5",
    "pybpod-api",
    "numpy",
]

[project.urls]
Homepage = "https://github.com/MurineShiftWork/msw-tasks-example"
"Issue Tracker" = "https://github.com/MurineShiftWork/msw-tasks-example/issues"

[project.optional-dependencies]
dev = [
    "commitizen",
    "pytest",
    "pytest-cov",
    "pre-commit",
    "ruff",
    "mypy",
]

[project.entry-points."msw.tasks"]
example = "murineshiftwork.tasks.example.task"

# ---------------------------------------------------------------------------
# Build
# ---------------------------------------------------------------------------

[tool.hatch.version]
source = "vcs"
fallback-version = "0.1.0"

[tool.hatch.build.hooks.vcs]
version-file = "src/murineshiftwork/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/murineshiftwork"]
artifacts = [
    "src/murineshiftwork/**/*.yaml",
]

[tool.hatch.build.targets.sdist]
include = [
    "/src/murineshiftwork",
    "/tests",
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
    "/VERSION",
]

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/murineshiftwork --durations=0"

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 88
indent-width = 4
src = ["src"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "YTT", "SIM", "PTH"]
ignore = ["E501"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Commitizen
# ---------------------------------------------------------------------------

[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "commitizen"
version = "0.1.0"
tag_format = "v$version"
update_changelog_on_bump = false
version_files = ["VERSION"]
